--- a/GameData/EngineIgnitor/MM_Configs/MM_RestockPlus.cfg
+++ b/GameData/EngineIgnitor/MM_Configs/MM_RestockPlus.cfg
@@ -1,11 +1,10 @@
 // Pug (1.25m starter vacuum engine)
-// The pug is extremely good for an early engine. Nerfing it by reducing ignitions early on. Improvements are available with the usual upgrades.
 @PART[restock-engine-125-pug]:NEEDS[ReStockPlus]
 {
     MODULE
     {
         name = ModuleEngineIgnitor
-        IgnitionsAvailable = 4
+        IgnitionsAvailable = 4 // Fewer for early tech, can be upgraded
         AutoIgnitionTemperature = 800
         IgnitorType = Internal
 		UseUllageSimulation = true
@@ -62,7 +61,7 @@
     MODULE
     {
         name = ModuleEngineIgnitor
-        IgnitionsAvailable = 4
+        IgnitionsAvailable = 2 // Fewer for early tech, can be upgraded
         AutoIgnitionTemperature = 800
         IgnitorType = Internal
 		UseUllageSimulation = true
