Addded tech progression for aerospikes

--- a/GameData/EngineIgnitor/MM_Configs/MM_RLA_Reborn.cfg
+++ b/GameData/EngineIgnitor/MM_Configs/MM_RLA_Reborn.cfg
@@ -19,9 +19,12 @@
     MODULE
     {
         name = ModuleEngineIgnitor
-        IgnitionsAvailable = 0
+        IgnitionsAvailable = 1
         AutoIgnitionTemperature = 800
-        IgnitorType = External
+        IgnitorType = Internal
+		UseUllageSimulation = true
+		ChanceWhenUnstable = 0.2  //0-1
+        ECforIgnition = 20
     }
 }
 
@@ -45,7 +48,7 @@
 {
     MODULE
     {
-         name = ModuleEngineIgnitor
+        name = ModuleEngineIgnitor
         IgnitionsAvailable = 1
         AutoIgnitionTemperature = 700
         IgnitorType = Internal
