--- a/GameData/EngineIgnitor/MM_Configs/MM_RLA_Reborn_TechUpgrades.cfg
+++ b/GameData/EngineIgnitor/MM_Configs/MM_RLA_Reborn_TechUpgrades.cfg
@@ -65,3 +65,37 @@
         }
     }
 }
+
+@PART[RLA_lfo_medium_linearspike]:NEEDS[RLA_Reborn]
+{
+    @MODULE[ModuleEngineIgnitor]
+    {        
+        UPGRADES
+        {
+            UPGRADE
+            {
+                name__ = ignitionUpgrade_1
+                techRequired__ = miniaturization
+                description__ = 
+                IgnitionsAvailable = 2                
+            }
+        }
+    }
+}
+
+@PART[RLA_small_spike]:NEEDS[RLA_Reborn]
+{
+    @MODULE[ModuleEngineIgnitor]
+    {        
+        UPGRADES
+        {
+            UPGRADE
+            {
+                name__ = ignitionUpgrade_1
+                techRequired__ = miniaturization
+                description__ = 
+                IgnitionsAvailable = 2                
+            }
+        }
+    }
+}
